tests/cases/standard-library/ok/diag/std-diag-source-map.ari
// Covers diagnostic and label location lookup through std::source::SourceMap.
fn main() -> i64 {
  var zone = zone::create(1024);
  var sources = source::source_map(ref mut zone, 2);
  let first = sources.add(ref mut zone, "good\nbad\n");
  let second = sources.add(ref mut zone, "other\nfile\n");
  let span = sources.lines(first).line_span(2);
  let diagnostic = diag::error("E0002", "bad token", span)
    .with_label(diag::primary(span, "unexpected token"));
  var score = 0;

  let location = diag::source_location(ref diagnostic, ref sources);
  if location.file().equals(first) && location.line() == 2 && location.column() == 1 {
    score = score + 1;
  }

  let method_location = diagnostic.source_location(ref sources);
  if method_location.line() == 2 && method_location.column() == 1 {
    score = score + 2;
  }

  let label = diagnostic.label();
  let label_location = diag::label_source_location(ref label, ref sources);
  if label_location.file().equals(first) && label_location.line() == 2 {
    score = score + 3;
  }

  let secondary = diag::secondary(sources.lines(second).line_span(1), "related source");
  let related = diagnostic.with_label(secondary);
  let related_location = related.label().source_location(ref sources);
  if related_location.file().equals(second) && related_location.line() == 1 {
    score = score + 4;
  }

  zone::destroy(zone);
  return score;
}
